Process metadata corrections for 2023.bionlp-1.42 (closes #7370)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -999,6 +999,7 @@ akshara-prabhakar:
 akshay-chaudhari:
   names:
   - {first: Akshay, last: Chaudhari}
+  - {first: Akshay S., last: Chaudhari}
   orcid: 0000-0002-3667-6796
 akshay-jagatap:
   names:
@@ -10146,6 +10147,7 @@ curry-i-guinn:
 curtis-langlotz:
   names:
   - {first: Curtis, last: Langlotz}
+  - {first: Curtis P., last: Langlotz}
   orcid: 0000-0002-8972-8051
 curtiss-cook:
   names:
