Process metadata corrections for 2023.inlg-main.6 (closes #7368)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -6761,6 +6761,7 @@ c-l-philip-chen:
 c-lee-giles:
   names:
   - {first: C. Lee, last: Giles}
+  - {first: Clyde Lee, last: Giles}
   orcid: 0000-0002-1931-585X
 c-mario-christoudias:
   names:
