Process metadata corrections for 2024.findings-acl.271 (closes #7367)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -44573,6 +44573,7 @@ pranav-narayanan-venkit:
 pranav-narayanan-venkit-0461:
   names:
   - {first: Pranav, last: Narayanan Venkit}
+  - {first: Pranav, last: Venkit}
   orcid: 0000-0002-5671-0461
 pranav-shetty:
   names:
