--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -10358,6 +10358,7 @@ damaris-ayuso:
 damian-blasi:
   names:
   - {first: Damian, last: Blasi}
+  - {first: Damián E., last: Blasi}
   orcid: 0000-0002-9885-1414
 damiano-spina:
   names:
