Process metadata corrections for C96-2192 (closes #7342)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -32647,6 +32647,7 @@ leif-groenqvist:
   names:
   - {first: Leif, last: Groenqvist}
   - {first: Leif, last: Gronqvist}
+  - {first: Leif, last: Grönqvist}
 leike-an:
   names:
   - {first: Leike, last: An}
