Process metadata corrections for 2025.cxgsnlp-1.21 (closes #7327)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -29935,6 +29935,7 @@ kam-fai-wong:
 kamal-abou-mikhael:
   names:
   - {first: Kamal Abou, last: Mikhael}
+  - {first: Kamal, last: Abou Mikhael}
   orcid: 0000-0001-7364-0058
 kamal-ndousse:
   names:
