Process metadata corrections for 2025.acl-long.172 (closes #7288)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -12654,6 +12654,7 @@ dong-zhou:
 dongbaichen-dongbaichen:
   names:
   - {first: DongbaiChen, last: DongbaiChen}
+  - {first: Dongbai, last: Chen}
   orcid: 0009-0009-9437-4938
 dongbin-zhao:
   names:
