Process metadata corrections for 2025.findings-acl.1183 (closes #7281)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -58185,6 +58185,7 @@ wang-zhonghua:
 wanghaojie-wanghaojie:
   names:
   - {first: WangHaojie, last: WangHaojie}
+  - {first: Haojie, last: Wang}
   orcid: 0000-0003-4605-148X
 wangjie-qiu:
   names:
