Process metadata corrections for 2024.smm4h-1.37 (closes #7239)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -34605,6 +34605,7 @@ luis-adrian-cabrera-diego:
 luis-afonso:
   names:
   - {first: Luis, last: Afonso}
+  - {first: Luís Carlos, last: Afonso}
   orcid: 0009-0005-6728-3089
 luis-chiruzzo:
   names:
