Process metadata corrections for 2025.findings-ijcnlp.120 (closes #7225)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -248,6 +248,7 @@ abhinav-joshi:
 abhinav-pm:
   names:
   - {first: Abhinav, last: Pm}
+  - {first: Abhinav, last: P M}
   orcid: 0009-0000-6354-8821
 abhinav-shrivastava:
   names:
