Verify/merge author beso-mikaberidze (#7532)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -5484,6 +5484,12 @@ bertram-hojer:
   names:
   - {first: Bertram, last: Højer}
   orcid: 0009-0002-2990-8752
+beso-mikaberidze:
+  degree: Ivane Javakhishvili Tbilisi State University
+  names:
+  - {first: Beso, last: Mikaberidze}
+  - {first: Besik, last: Mikaberidze}
+  orcid: 0009-0000-6351-8155
 beth-ann-hockey:
   names:
   - {first: Beth Ann, last: Hockey}
