Verify/merge author myeongjun-erik-jang (#7324)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -40393,6 +40393,12 @@ myeongho-jeong:
   names:
   - {first: Myeongho, last: Jeong}
   orcid: 0000-0001-5903-4553
+myeongjun-erik-jang:
+  degree: University of Oxford
+  names:
+  - {first: Myeongjun Erik, last: Jang}
+  - {first: Myeongjun, last: Jang}
+  orcid: 0000-0002-9352-4799
 mykel-kochenderfer:
   names:
   - {first: Mykel, last: Kochenderfer}
