Verify/merge author rakshitha-rao-ailneni (#7105)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -46243,8 +46243,10 @@ rakib-islam:
   - {first: Rakib, last: Islam}
   orcid: 0009-0002-0177-9629
 rakshitha-rao-ailneni:
+  degree: University of Texas at Dallas
   names:
   - {first: Rakshitha Rao, last: Ailneni}
+  - {first: Ailneni Rakshitha, last: Rao}
   orcid: 0009-0000-2198-3278
 ralf-d-brown:
   names:
