--- a/data/yaml/sigs/sigmol.yaml
+++ b/data/yaml/sigs/sigmol.yaml
@@ -2,6 +2,8 @@ Name: Association for Mathematics of Language
 ShortName: SIGMOL
 URL: http://molweb.org/
 Meetings:
+  - 2025:
+    - 2025.mol-1
   - 2021:
     - 2021.mol-1
   - 2019:
