Disable name matching: minghan-li yixin-wu shanshan-wang miao-li jing-tang (closes #5259, closes #5148, closes #5142, closes #4857, closes #4672)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -26333,6 +26333,7 @@ jing-ren:
   - {first: Jing, last: Ren}
   orcid: 0000-0003-0169-1491
 jing-tang:
+  disable_name_matching: true
   names:
   - {first: Jing, last: Tang}
   orcid: 0000-0002-0785-707X
@@ -38103,6 +38104,7 @@ mian-zhou:
   - {first: Mian, last: Zhou}
   orcid: 0000-0003-2514-4433
 miao-li:
+  disable_name_matching: true
   names:
   - {first: Miao, last: Li}
   orcid: 0000-0002-1669-7063
@@ -39064,6 +39066,7 @@ mingfu-liang:
   - {first: Mingfu, last: Liang}
   orcid: 0000-0001-6779-2418
 minghan-li:
+  disable_name_matching: true
   names:
   - {first: Minghan, last: Li}
   orcid: 0009-0007-8972-7714
@@ -50683,6 +50686,7 @@ shanshan-liu:
   - {first: Shanshan, last: Liu}
   orcid: 0000-0002-4966-679X
 shanshan-wang:
+  disable_name_matching: true
   names:
   - {first: Shanshan, last: Wang}
   orcid: 0009-0004-2680-0775
@@ -65715,6 +65719,7 @@ yixin-wang:
   - {first: Yixin, last: Wang}
   orcid: 0000-0002-6617-4842
 yixin-wu:
+  disable_name_matching: true
   names:
   - {first: Yixin, last: Wu}
   orcid: 0000-0002-3000-9423
