--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -62463,8 +62463,9 @@ xuan-jing-huang:
   orcid: 0000-0001-9197-9426
 xuan-long-do:
   names:
-  - {first: Xuan Long, last: Do}
   - {first: Do Xuan, last: Long}
+  - {first: Xuan Long, last: Do}
+  orcid: 0009-0002-0847-8431
 xuan-luo:
   names:
   - {first: Xuan, last: Luo}
