Verify/merge juan-pablo-martinez (closes #7089)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -28403,6 +28403,12 @@ juan-miguel-vilar:
   - {first: Juan-Miguel, last: Vilar}
   - {first: J. M., last: Vilar}
   - {first: Juan M., last: Vilar}
+juan-pablo-martinez:
+  degree: Universidad de Zaragoza
+  names:
+  - {first: Juan Pablo, last: Martínez}
+  - {first: Juan Pablo, last: Martínez Cortés}
+  orcid: 0000-0002-7503-3339
 juan-pablo-munoz:
   names:
   - {first: Juan Pablo, last: Munoz}
