Disable name matching: jie-zeng (closes #5586)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -25927,6 +25927,7 @@ jie-yu:
   - {first: Jie, last: Yu}
   orcid: 0009-0007-1545-7010
 jie-zeng:
+  disable_name_matching: true
   names:
   - {first: Jie, last: Zeng}
   orcid: 0000-0003-2206-6994
