Verify/merge mohit-singh-tomar (closes #7119)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -39898,6 +39898,12 @@ mohit-chandra:
   names:
   - {first: Mohit, last: Chandra}
   orcid: 0000-0001-5030-6647
+mohit-singh-tomar:
+  degree: Indian Institute of Technology Bombay
+  names:
+  - {first: Mohit Singh, last: Tomar}
+  - {first: Mohit, last: Tomar}
+  orcid: 0009-0009-1176-005X
 mohna-chakraborty:
   names:
   - {first: Mohna, last: Chakraborty}
