Normalize venue formats via library save

--- a/data/yaml/venues/africanlp.yaml
+++ b/data/yaml/venues/africanlp.yaml
@@ -1,2 +1,2 @@
 acronym: AfricaNLP
-name: 'Workshop on African Natural Language Processing (AfricaNLP)'
+name: Workshop on African Natural Language Processing (AfricaNLP)
