--- a/data/yaml/venues/aielpl.yaml
+++ b/data/yaml/venues/aielpl.yaml
@@ -1,2 +1,3 @@
 acronym: AIELPL
-name: Workshop on Artificial Intelligence and Easy and Plain Language in Institutional Contexts
+name: Workshop on Artificial Intelligence and Easy and Plain Language in Institutional
+  Contexts
