--- a/data/yaml/venues/brigap.yaml
+++ b/data/yaml/venues/brigap.yaml
@@ -1,3 +1,2 @@
 acronym: BriGap
-name: Workshop on the Bridges and Gaps between Formal and Computational
-  Linguistics
+name: Workshop on the Bridges and Gaps between Formal and Computational Linguistics
