--- a/data/yaml/venues/hcinlp.yaml
+++ b/data/yaml/venues/hcinlp.yaml
@@ -1,2 +1,2 @@
 acronym: HCINLP
-name: Workshop on Bridging Human–Computer Interaction and Natural Language Processing
+name: "Workshop on Bridging Human\u2013Computer Interaction and Natural Language Processing"
