--- a/data/yaml/venues/lm4dh.yaml
+++ b/data/yaml/venues/lm4dh.yaml
@@ -1,3 +1,2 @@
 acronym: LM4DH
-name: Workshop on Natural Language Processing and Language Models for Digital
-  Humanities
+name: Workshop on Natural Language Processing and Language Models for Digital Humanities
