--- a/data/yaml/venues/neusymbridge.yaml
+++ b/data/yaml/venues/neusymbridge.yaml
@@ -1,2 +1,3 @@
 acronym: NeusymBridge
-name: 'Workshop on Bridging Neurons and Symbols for Natural Language Processing and Knowledge Graphs Reasoning'
+name: Workshop on Bridging Neurons and Symbols for Natural Language Processing and
+  Knowledge Graphs Reasoning
