--- a/data/yaml/venues/sciprodllm.yaml
+++ b/data/yaml/venues/sciprodllm.yaml
@@ -1,3 +1,2 @@
 acronym: SciProdLLM
-name: "Workshop on Human-LLM Collaboration for Ethical and Responsible\
-  \ Science Production"
+name: Workshop on Human-LLM Collaboration for Ethical and Responsible Science Production
