--- a/data/yaml/venues/nlpai4health.yaml
+++ b/data/yaml/venues/nlpai4health.yaml
@@ -1,3 +1,3 @@
 acronym: NLP-AI4Health
-name: Workshop on Integrating NLP and AI for Multilingual and
-  Patient-Centric Healthcare Communication
+name: Workshop on Integrating NLP and AI for Multilingual and Patient-Centric Healthcare
+  Communication
