--- a/.github/workflows/check-python-build.yml
+++ b/.github/workflows/check-python-build.yml
@@ -1,4 +1,4 @@
-name: Checks
+name: Python library
 
 on:
   push:
@@ -16,7 +16,8 @@ on:
       - 'python/**'
 
 jobs:
-  build:
+  tests:
+    name: "Tests"
     defaults:
       run:
         working-directory: ./python
