--- a/data/yaml/sigs/sigmol.yaml
+++ b/data/yaml/sigs/sigmol.yaml
@@ -1,6 +1,6 @@
 Name: Association for Mathematics of Language
 ShortName: SIGMOL
-URL: http://molweb.org/
+URL: http://www.molweb.xyz
 Meetings:
   - 2025:
     - 2025.mol-1
