Revert "Normalize venue formats via library save"
This reverts commit 35f04f734b16988e31771bdcec7faff786544e5d.

--- a/data/yaml/venues/aielpl.yaml
+++ b/data/yaml/venues/aielpl.yaml
@@ -1,3 +1,2 @@
 acronym: AIELPL
-name: Workshop on Artificial Intelligence and Easy and Plain Language in Institutional
-  Contexts
+name: Workshop on Artificial Intelligence and Easy and Plain Language in Institutional Contexts
