--- a/data/yaml/venues/brigap.yaml
+++ b/data/yaml/venues/brigap.yaml
@@ -1,2 +1,3 @@
 acronym: BriGap
-name: Workshop on the Bridges and Gaps between Formal and Computational Linguistics
+name: Workshop on the Bridges and Gaps between Formal and Computational
+  Linguistics
