--- a/data/yaml/venues/indonlp.yaml
+++ b/data/yaml/venues/indonlp.yaml
@@ -1,2 +1,3 @@
 acronym: IndoNLP
-name: Workshop on Natural Language Processing for Indo-Aryan and Dravidian Languages
+name: Workshop on Natural Language Processing for Indo-Aryan
+  and Dravidian Languages
