--- a/data/yaml/venues/jlcl.yaml
+++ b/data/yaml/venues/jlcl.yaml
@@ -1,4 +1,5 @@
 acronym: JLCL
-is_toplevel: true
 name: Journal for Language Technology and Computational Linguistics
 type: journal
+is_acl: false
+is_toplevel: true
