--- a/data/yaml/venues/nejlt.yaml
+++ b/data/yaml/venues/nejlt.yaml
@@ -1,5 +1,6 @@
 acronym: NEJLT
-is_toplevel: true
 name: Northern European Journal of Language Technology
-type: journal
 url: https://nejlt.org
+type: journal
+is_acl: false
+is_toplevel: true
