--- a/data/yaml/venues/bhasha.yaml
+++ b/data/yaml/venues/bhasha.yaml
@@ -1,3 +1,3 @@
 acronym: BHASHA
-name: Workshop on Benchmarks, Harmonization, Annotation, and Standardization for Human-Centric
-  AI in Indian Languages
+name: Workshop on Benchmarks, Harmonization, Annotation, and Standardization for
+  Human-Centric AI in Indian Languages
