--- a/data/yaml/venues/ethicalllms.yaml
+++ b/data/yaml/venues/ethicalllms.yaml
@@ -1,3 +1,3 @@
 acronym: EthicalLLMs
-name: The Workshop on Ethical Concerns in Training, Evaluating and Deploying Large
-  Language Models
+name: The Workshop on Ethical Concerns in Training, Evaluating and Deploying
+  Large Language Models
