--- a/data/yaml/venues/nlpaics.yaml
+++ b/data/yaml/venues/nlpaics.yaml
@@ -1,3 +1,3 @@
 acronym: NLPAICS
-name: International Conference on Natural Language Processing and Artificial Intelligence
-  for Cyber Security
+name: International Conference on Natural Language Processing and Artificial
+  Intelligence for Cyber Security
