--- a/data/yaml/venues/splurobonlp.yaml
+++ b/data/yaml/venues/splurobonlp.yaml
@@ -1,3 +1,3 @@
 acronym: splurobonlp
-name: International Combined Workshop on Spatial Language Understanding and Grounded
-  Communication for Robotics
+name: International Combined Workshop on Spatial Language Understanding and
+  Grounded Communication for Robotics
