Revert "Reformat SIG files with library"
This reverts commit 71214f4b42ed9e18b3c06d25cf1feeb620e27abf.

--- a/data/yaml/sigs/sigarab.yaml
+++ b/data/yaml/sigs/sigarab.yaml
@@ -2,27 +2,27 @@ Name: Special Interest Group on Arabic Natural Language Processing
 ShortName: SIGARAB
 URL: https://www.sigarab.org/
 Meetings:
-- 2025:
-  - 2025.arabicnlp-main
-  - 2025.arabicnlp-sharedtasks
-- 2024:
-  - 2024.arabicnlp-1
-  - 2024.osact-1
-- 2023:
-  - 2023.arabicnlp-1
-- 2022:
-  - 2022.wanlp-1
-  - 2022.osact-1
-- 2021:
-  - 2021.wanlp-1
-- 2020:
-  - 2020.wanlp-1
-  - 2020.osact-1
-- 2019:
-  - W19-46
-- 2017:
-  - W17-13
-- 2015:
-  - W15-32
-- 2014:
-  - W14-36
+  - 2025:
+    - 2025.arabicnlp-main
+    - 2025.arabicnlp-sharedtasks
+  - 2024:
+    - 2024.arabicnlp-1
+    - 2024.osact-1
+  - 2023:
+    - 2023.arabicnlp-1
+  - 2022:
+    - 2022.wanlp-1
+    - 2022.osact-1
+  - 2021:
+    - 2021.wanlp-1
+  - 2020:
+    - 2020.wanlp-1
+    - 2020.osact-1
+  - 2019:
+    - W19-46  # Fourth Arabic Natural Language Processing Workshop
+  - 2017:
+    - W17-13  # Third Arabic Natural Language Processing Workshop
+  - 2015:
+    - W15-32  # Second Workshop on Arabic Natural Language Processing
+  - 2014:
+    - W14-36  # EMNLP 2014 Workshop on Arabic Natural Language Processing (ANLP)
