--- a/data/yaml/sigs/sigann.yaml
+++ b/data/yaml/sigs/sigann.yaml
@@ -2,40 +2,40 @@ Name: Special Interest Group for Annotation (SIGANN)
 ShortName: SIGANN
 URL: https://sigann.github.io/
 Meetings:
-- 2022:
-  - 2022.law-1
-- 2020:
-  - 2020.law-1
-- 2019:
-  - W19-40
-- 2018:
-  - W18-49
-- 2017:
-  - W17-08
-- 2016:
-  - W16-17
-- 2015:
-  - W15-16
-  - W15-29
-- 2014:
-  - W14-49
-- 2013:
-  - W13-16
-  - W13-23
-  - W13-54
-  - W13-55
-- 2012:
-  - W12-36
-- 2011:
-  - W11-04
-- 2010:
-  - W10-18
-- 2009:
-  - W09-19
-  - W09-24
-  - W09-30
-- 2008:
-  - Name: The LAW II
-    URL: http://verbs.colorado.edu/LAW2008/
-- 2007:
-  - W07-15
+  - 2022:
+    - 2022.law-1 # Proceedings of The 16th Lingusitic Annotation Workshop (LAW-XVI) within LREC2022
+  - 2020:
+    - 2020.law-1 # Proceedings of the 14th Linguistic Annotation Workshop
+  - 2019:
+    - W19-40 # LAW XIII
+  - 2018:
+    - W18-49 # LAW-MWE-CxG-2018
+  - 2017:
+    - W17-08 # The LAW XI
+  - 2016:
+    - W16-17 # The LAW X
+  - 2015:
+    - W15-16 # The LAW IX
+    - W15-29 # WASSA 6
+  - 2014:
+    - W14-49 # The LAW VIII
+  - 2013:
+    - W13-16 # WASSA 4
+    - W13-23 # The LAW 7
+    - W13-54 # GL
+    - W13-55 # LDL
+  - 2012:
+    - W12-36 # The LAW 6
+  - 2011:
+    - W11-04 # The LAW 5
+  - 2010:
+    - W10-18 # The LAW 4
+  - 2009:
+    - W09-19 # Active Learning for NLP
+    - W09-24 # SEW-2009
+    - W09-30 # The Law III
+  - 2008:
+    - Name: 'The LAW II'
+      URL: 'http://verbs.colorado.edu/LAW2008/'
+  - 2007:
+    - W07-15 # The LAW 1
