--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -33,10 +33,10 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y jing bibutils openssh-client rsync libyaml-dev libpython3-dev
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v5
 
     - name: Run Python library integration tests
-      run: uv run --frozen pytest -m "integration"
+      run: uv run --locked pytest -m "integration"
       working-directory: ./python
 
     - name: Build website
