Manual author corrections 2026-02-17 (#7534)
* Verify/merge author beso-mikaberidze (#7532)

* Verify/merge author myeongjun-erik-jang (#7324)

* Verify/merge author rakshitha-rao-ailneni (#7105)

* Disable name matching: minghan-li yixin-wu shanshan-wang miao-li jing-tang (closes #5259, closes #5148, closes #5142, closes #4857, closes #4672)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -5484,6 +5484,12 @@ bertram-hojer:
   names:
   - {first: Bertram, last: Højer}
   orcid: 0009-0002-2990-8752
+beso-mikaberidze:
+  degree: Ivane Javakhishvili Tbilisi State University
+  names:
+  - {first: Beso, last: Mikaberidze}
+  - {first: Besik, last: Mikaberidze}
+  orcid: 0009-0000-6351-8155
 beth-ann-hockey:
   names:
   - {first: Beth Ann, last: Hockey}
@@ -26329,6 +26335,7 @@ jing-ren:
   - {first: Jing, last: Ren}
   orcid: 0000-0003-0169-1491
 jing-tang:
+  disable_name_matching: true
   names:
   - {first: Jing, last: Tang}
   orcid: 0000-0002-0785-707X
@@ -38099,6 +38106,7 @@ mian-zhou:
   - {first: Mian, last: Zhou}
   orcid: 0000-0003-2514-4433
 miao-li:
+  disable_name_matching: true
   names:
   - {first: Miao, last: Li}
   orcid: 0000-0002-1669-7063
@@ -39060,6 +39068,7 @@ mingfu-liang:
   - {first: Mingfu, last: Liang}
   orcid: 0000-0001-6779-2418
 minghan-li:
+  disable_name_matching: true
   names:
   - {first: Minghan, last: Li}
   orcid: 0009-0007-8972-7714
@@ -40389,6 +40398,12 @@ myeongho-jeong:
   names:
   - {first: Myeongho, last: Jeong}
   orcid: 0000-0001-5903-4553
+myeongjun-erik-jang:
+  degree: University of Oxford
+  names:
+  - {first: Myeongjun Erik, last: Jang}
+  - {first: Myeongjun, last: Jang}
+  orcid: 0000-0002-9352-4799
 mykel-kochenderfer:
   names:
   - {first: Mykel, last: Kochenderfer}
@@ -46233,8 +46248,10 @@ rakib-islam:
   - {first: Rakib, last: Islam}
   orcid: 0009-0002-0177-9629
 rakshitha-rao-ailneni:
+  degree: University of Texas at Dallas
   names:
   - {first: Rakshitha Rao, last: Ailneni}
+  - {first: Ailneni Rakshitha, last: Rao}
   orcid: 0009-0000-2198-3278
 ralf-d-brown:
   names:
@@ -50671,6 +50688,7 @@ shanshan-liu:
   - {first: Shanshan, last: Liu}
   orcid: 0000-0002-4966-679X
 shanshan-wang:
+  disable_name_matching: true
   names:
   - {first: Shanshan, last: Wang}
   orcid: 0009-0004-2680-0775
@@ -65703,6 +65721,7 @@ yixin-wang:
   - {first: Yixin, last: Wang}
   orcid: 0000-0002-6617-4842
 yixin-wu:
+  disable_name_matching: true
   names:
   - {first: Yixin, last: Wu}
   orcid: 0000-0002-3000-9423
