--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -62804,6 +62804,7 @@ xun-zhou:
 xunzhu-tang:
   names:
   - {first: Xunzhu, last: Tang}
+  - {first: Daniel, last: Tang}
   orcid: 0000-0003-2831-6472
 xupeng-zha:
   names:
