Process verification for peter-zeng/unverified (closes #7535)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -43930,6 +43930,11 @@ peter-wittenburg:
   names:
   - {first: Peter, last: Wittenburg}
   - {first: P., last: Wittenburg}
+peter-zeng:
+  degree: Stony Brook University
+  names:
+  - {first: Peter, last: Zeng}
+  orcid: 0009-0009-1156-5959
 peteris-paikens:
   names:
   - {first: Peteris, last: Paikens}
