Process verification for daniel-fadlon/unverified (closes #7514)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -10625,6 +10625,11 @@ daniel-f-campos:
   names:
   - {first: Daniel F, last: Campos}
   orcid: 0000-0002-5138-8426
+daniel-fadlon:
+  degree: Reichman University (https://www.runi.ac.il/)
+  names:
+  - {first: Daniel, last: Fadlon}
+  orcid: 0009-0001-0723-6855
 daniel-ferres:
   names:
   - {first: Daniel, last: Ferrés}
