Process verification for aneesh-deshmukh/unverified (closes #7506)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -2935,6 +2935,11 @@ andy-t-liu:
   - {first: Andy T., last: Liu}
   - {first: Andy, last: Liu}
   orcid: 0000-0002-2502-3992
+aneesh-deshmukh:
+  degree: University of Cincinnati
+  names:
+  - {first: Aneesh, last: Deshmukh}
+  orcid: 0009-0003-3507-3103
 aneesh-komanduri:
   names:
   - {first: Aneesh, last: Komanduri}
