Process verification for steffen-frenzel/unverified (closes #7505)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -53746,6 +53746,11 @@ steffen-freisinger:
   names:
   - {first: Steffen, last: Freisinger}
   orcid: 0009-0009-5333-8746
+steffen-frenzel:
+  degree: Universität Potsdam
+  names:
+  - {first: Steffen, last: Frenzel}
+  orcid: 0009-0006-6308-993X
 steffen-herbold:
   names:
   - {first: Steffen, last: Herbold}
