Process verification for eunice-akani/unverified (closes #7491)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -14645,6 +14645,11 @@ eunhwan-park:
   names:
   - {first: Eunhwan, last: Park}
   orcid: 0000-0001-5925-9744
+eunice-akani:
+  degree: Aix-Marseille Université
+  names:
+  - {first: Eunice, last: Akani}
+  orcid: 0000-0003-1760-4532
 eunike-andriani-kardinata:
   names:
   - {first: Eunike Andriani, last: Kardinata}
