Process verification for rohan-jha/unverified (closes #7490)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -47667,6 +47667,11 @@ rogier-hintzen:
   names:
   - {first: Rogier, last: Hintzen}
   orcid: 0000-0003-2585-3643
+rohan-jha:
+  degree: Johns Hopkins University
+  names:
+  - {first: Rohan, last: Jha}
+  orcid: 0009-0001-5008-4949
 rohan-joseph:
   names:
   - {first: Rohan, last: Joseph}
