Process verification for paul-he/unverified (closes #7485)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -43107,6 +43107,11 @@ paul-h-garthwaite:
   - {first: Paul H., last: Garthwaite}
   - {first: Paul, last: Garthwaite}
   - {first: Paul H, last: Garthwaite}
+paul-he:
+  degree: Nanyang Technological University, Singapore
+  names:
+  - {first: Paul, last: He}
+  orcid: 0009-0006-5309-5631
 paul-j-l-ammann:
   names:
   - {first: Paul J. L., last: Ammann}
