Process verification for girish-koushik/unverified (closes #7480)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -17416,6 +17416,11 @@ girish-chowdhary:
   names:
   - {first: Girish, last: Chowdhary}
   orcid: 0000-0002-4657-307X
+girish-koushik:
+  degree: University of Surrey
+  names:
+  - {first: Girish, last: Koushik}
+  orcid: 0000-0002-3875-6503
 girish-kumar:
   names:
   - {first: Girish, last: Kumar}
