Process verification for chiara-zanchi/unverified (closes #7479)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -8746,6 +8746,11 @@ chiamaka-ijeoma-chukwuneke:
   names:
   - {first: Chiamaka Ijeoma, last: Chukwuneke}
   orcid: 0000-0002-2966-9416
+chiara-zanchi:
+  degree: University of Pavia
+  names:
+  - {first: Chiara, last: Zanchi}
+  orcid: 0000-0001-9216-9986
 chibuzor-okocha:
   names:
   - {first: Chibuzor, last: Okocha}
