Process verification for xiaojing-zhao/unverified (closes #7472)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -60985,6 +60985,11 @@ xiaojing-zhang:
   names:
   - {first: Xiaojing, last: Zhang}
   orcid: 0009-0006-5132-0380
+xiaojing-zhao:
+  degree: The Hong Kong Polytechnic University
+  names:
+  - {first: Xiaojing, last: Zhao}
+  orcid: 0009-0009-7325-5366
 xiaojun-bi:
   names:
   - {first: Xiaojun, last: Bi}
