Process verification for abdellah-el-mekki/unverified (closes #7433)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -112,6 +112,11 @@ abdelkader-el-mahdaouy:
   names:
   - {first: Abdelkader, last: El Mahdaouy}
   orcid: 0000-0003-4281-2472
+abdellah-el-mekki:
+  degree: Mohammed VI Polytechnic University
+  names:
+  - {first: Abdellah, last: El Mekki}
+  orcid: 0000-0002-7394-3611
 abdelmajid-ben-hamadou:
   names:
   - {first: Abdelmajid, last: Ben Hamadou}
