Process verification for meladel-mistica/unverified (closes #7417)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -37842,6 +37842,11 @@ meitang-li:
   names:
   - {first: Meitang, last: Li}
   orcid: 0000-0001-6380-8347
+meladel-mistica:
+  degree: Australian National University
+  names:
+  - {first: Meladel, last: Mistica}
+  orcid: 0000-0001-6147-120X
 melanie-martin:
   names:
   - {first: Melanie, last: Martin}
