Process verification for yuki-arase/unverified (closes #7412)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -67753,6 +67753,11 @@ yukang-lin:
   names:
   - {first: Yukang, last: Lin}
   orcid: 0009-0001-2469-5690
+yuki-arase:
+  degree: University of Osaka
+  names:
+  - {first: Yuki, last: Arase}
+  orcid: 0000-0002-7271-6206
 yuki-hou:
   names:
   - {first: Yuki, last: Hou}
