Process verification for palakorn-achananuparp/unverified (closes #6957)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -42729,6 +42729,11 @@ palak-jain:
   names:
   - {first: Palak, last: Jain}
   orcid: 0000-0002-4344-9356
+palakorn-achananuparp:
+  degree: Drexel University
+  names:
+  - {first: Palakorn, last: Achananuparp}
+  orcid: 0000-0002-7684-1725
 palash-goyal:
   names:
   - {first: Palash, last: Goyal}
