Process verification for william-muntean/unverified (closes #6800)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -59958,6 +59958,11 @@ william-morgan:
   names:
   - {first: William, last: Morgan}
   - {first: William T., last: Morgan}
+william-muntean:
+  degree: University of Oklahoma
+  names:
+  - {first: William, last: Muntean}
+  orcid: 0009-0007-9507-9274
 william-p-mccarthy:
   names:
   - {first: William P, last: McCarthy}
