Process verification for zena-al-khalili/unverified (closes #5718)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -69073,6 +69073,11 @@ zeming-liu:
   names:
   - {first: Zeming, last: Liu}
   orcid: 0000-0002-3691-8097
+zena-al-khalili:
+  degree: Saarland University
+  names:
+  - {first: Zena, last: Al-Khalili}
+  orcid: 0009-0004-3500-3380
 zengchang-qin:
   names:
   - {first: Zengchang, last: Qin}
