--- a/data/yaml/sigs/sigmol.yaml
+++ b/data/yaml/sigs/sigmol.yaml
@@ -1,7 +1,9 @@
 Name: Association for Mathematics of Language
 ShortName: SIGMOL
-URL: http://molweb.org/
+URL: http://www.molweb.xyz
 Meetings:
+  - 2025:
+    - 2025.mol-1
   - 2021:
     - 2021.mol-1
   - 2019:
