Process verification for hamidreza-saghir/unverified (closes #7300)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -18853,6 +18853,11 @@ hamidreza-saffari:
   names:
   - {first: Hamidreza, last: Saffari}
   orcid: 0009-0004-4252-5662
+hamidreza-saghir:
+  degree: University of Toronto
+  names:
+  - {first: Hamidreza, last: Saghir}
+  orcid: 0009-0003-6390-2466
 hamilton-clouse:
   names:
   - {first: Hamilton, last: Clouse}
