Process verification for nils-constantin-hellwig/unverified (closes #5555)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -41695,6 +41695,11 @@ niloy-ganguly:
   names:
   - {first: Niloy, last: Ganguly}
   orcid: 0000-0002-3967-186X
+nils-constantin-hellwig:
+  degree: University of Regensburg
+  names:
+  - {first: Nils Constantin, last: Hellwig}
+  orcid: 0009-0000-7305-8797
 nils-dycke:
   names:
   - {first: Nils, last: Dycke}
