Process verification for axel-j-soto/unverified (closes #5553)

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -4643,6 +4643,11 @@ axel-buhler:
   names:
   - {first: Axel, last: Bühler}
   orcid: 0000-0001-5062-8806
+axel-j-soto:
+  degree: Universidad Nacional del Sur
+  names:
+  - {first: Axel J., last: Soto}
+  orcid: 0000-0002-9021-7566
 aya-el-aatar:
   names:
   - {first: Aya, last: El aatar}
