Add table formatter

--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -8,8 +8,12 @@ rssLimit = 1000
   papers = "/:slug/"
 
 [markup]
+
   [markup.goldmark]
     [markup.goldmark.extensions]
       table = true
     [markup.goldmark.renderer]
       unsafe = true  # allow HTML in MD files
+    [markup.goldmark.parser]
+      [markup.goldmark.parser.attribute]
+        block = true
