Add name variant for Luis Fernando D’Haro

--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -34633,6 +34633,7 @@ luis-fernando-costa:
 luis-fernando-dharo:
   names:
   - {first: Luis Fernando, last: D’Haro}
+  - {first: Luis Fernando, last: D'Haro}
   - {first: Luis F., last: d’Haro}
   orcid: 0000-0002-3411-7384
 luis-filipe-nakayama:
