--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -68,13 +68,19 @@ dev = [
     "types-lxml>=2026.1.1",
     "pymdown-extensions>=10.20.1,<11",
     "pytest-datadir>=1.8.0,<2",
-    "richbench",
     "types-requests>=2.32.4.20260107",
     "responses>=0.25.8",
+]
+profiling = [
+    "memray>=1.19.1",
+    "richbench",
 ]
 
 [tool.mypy]
 strict = true
+
+[tool.uv]
+default-groups = "all"
 
 [tool.uv.build-backend]
 module-name = "acl_anthology"
