--- a/data/yaml/people.yaml
+++ b/data/yaml/people.yaml
@@ -112,6 +112,11 @@ abdelkader-el-mahdaouy:
   names:
   - {first: Abdelkader, last: El Mahdaouy}
   orcid: 0000-0003-4281-2472
+abdellah-el-mekki:
+  degree: Mohammed VI Polytechnic University
+  names:
+  - {first: Abdellah, last: El Mekki}
+  orcid: 0000-0002-7394-3611
 abdelmajid-ben-hamadou:
   names:
   - {first: Abdelmajid, last: Ben Hamadou}
@@ -2935,6 +2940,11 @@ andy-t-liu:
   - {first: Andy T., last: Liu}
   - {first: Andy, last: Liu}
   orcid: 0000-0002-2502-3992
+aneesh-deshmukh:
+  degree: University of Cincinnati
+  names:
+  - {first: Aneesh, last: Deshmukh}
+  orcid: 0009-0003-3507-3103
 aneesh-komanduri:
   names:
   - {first: Aneesh, last: Komanduri}
@@ -4633,6 +4643,11 @@ axel-buhler:
   names:
   - {first: Axel, last: Bühler}
   orcid: 0000-0001-5062-8806
+axel-j-soto:
+  degree: Universidad Nacional del Sur
+  names:
+  - {first: Axel J., last: Soto}
+  orcid: 0000-0002-9021-7566
 aya-el-aatar:
   names:
   - {first: Aya, last: El aatar}
@@ -8741,6 +8756,11 @@ chiamaka-ijeoma-chukwuneke:
   names:
   - {first: Chiamaka Ijeoma, last: Chukwuneke}
   orcid: 0000-0002-2966-9416
+chiara-zanchi:
+  degree: University of Pavia
+  names:
+  - {first: Chiara, last: Zanchi}
+  orcid: 0000-0001-9216-9986
 chibuzor-okocha:
   names:
   - {first: Chibuzor, last: Okocha}
@@ -10625,6 +10645,11 @@ daniel-f-campos:
   names:
   - {first: Daniel F, last: Campos}
   orcid: 0000-0002-5138-8426
+daniel-fadlon:
+  degree: Reichman University (https://www.runi.ac.il/)
+  names:
+  - {first: Daniel, last: Fadlon}
+  orcid: 0009-0001-0723-6855
 daniel-ferres:
   names:
   - {first: Daniel, last: Ferrés}
@@ -14635,6 +14660,11 @@ eunhwan-park:
   names:
   - {first: Eunhwan, last: Park}
   orcid: 0000-0001-5925-9744
+eunice-akani:
+  degree: Aix-Marseille Université
+  names:
+  - {first: Eunice, last: Akani}
+  orcid: 0000-0003-1760-4532
 eunike-andriani-kardinata:
   names:
   - {first: Eunike Andriani, last: Kardinata}
@@ -17401,6 +17431,11 @@ girish-chowdhary:
   names:
   - {first: Girish, last: Chowdhary}
   orcid: 0000-0002-4657-307X
+girish-koushik:
+  degree: University of Surrey
+  names:
+  - {first: Girish, last: Koushik}
+  orcid: 0000-0002-3875-6503
 girish-kumar:
   names:
   - {first: Girish, last: Kumar}
@@ -18823,6 +18858,11 @@ hamidreza-saffari:
   names:
   - {first: Hamidreza, last: Saffari}
   orcid: 0009-0004-4252-5662
+hamidreza-saghir:
+  degree: University of Toronto
+  names:
+  - {first: Hamidreza, last: Saghir}
+  orcid: 0009-0003-6390-2466
 hamilton-clouse:
   names:
   - {first: Hamilton, last: Clouse}
@@ -37813,6 +37853,11 @@ meitang-li:
   names:
   - {first: Meitang, last: Li}
   orcid: 0000-0001-6380-8347
+meladel-mistica:
+  degree: Australian National University
+  names:
+  - {first: Meladel, last: Mistica}
+  orcid: 0000-0001-6147-120X
 melanie-martin:
   names:
   - {first: Melanie, last: Martin}
@@ -41656,6 +41701,11 @@ niloy-ganguly:
   names:
   - {first: Niloy, last: Ganguly}
   orcid: 0000-0002-3967-186X
+nils-constantin-hellwig:
+  degree: University of Regensburg
+  names:
+  - {first: Nils Constantin, last: Hellwig}
+  orcid: 0009-0000-7305-8797
 nils-dycke:
   names:
   - {first: Nils, last: Dycke}
@@ -42695,6 +42745,11 @@ palak-jain:
   names:
   - {first: Palak, last: Jain}
   orcid: 0000-0002-4344-9356
+palakorn-achananuparp:
+  degree: Drexel University
+  names:
+  - {first: Palakorn, last: Achananuparp}
+  orcid: 0000-0002-7684-1725
 palash-goyal:
   names:
   - {first: Palash, last: Goyal}
@@ -43093,6 +43148,11 @@ paul-h-garthwaite:
   - {first: Paul H., last: Garthwaite}
   - {first: Paul, last: Garthwaite}
   - {first: Paul H, last: Garthwaite}
+paul-he:
+  degree: Nanyang Technological University, Singapore
+  names:
+  - {first: Paul, last: He}
+  orcid: 0009-0006-5309-5631
 paul-j-l-ammann:
   names:
   - {first: Paul J. L., last: Ammann}
@@ -43931,6 +43991,11 @@ peter-wittenburg:
   names:
   - {first: Peter, last: Wittenburg}
   - {first: P., last: Wittenburg}
+peter-zeng:
+  degree: Stony Brook University
+  names:
+  - {first: Peter, last: Zeng}
+  orcid: 0009-0009-1156-5959
 peteris-paikens:
   names:
   - {first: Peteris, last: Paikens}
@@ -47648,6 +47713,11 @@ rogier-hintzen:
   names:
   - {first: Rogier, last: Hintzen}
   orcid: 0000-0003-2585-3643
+rohan-jha:
+  degree: Johns Hopkins University
+  names:
+  - {first: Rohan, last: Jha}
+  orcid: 0009-0001-5008-4949
 rohan-joseph:
   names:
   - {first: Rohan, last: Joseph}
@@ -53732,6 +53802,11 @@ steffen-freisinger:
   names:
   - {first: Steffen, last: Freisinger}
   orcid: 0009-0009-5333-8746
+steffen-frenzel:
+  degree: Universität Potsdam
+  names:
+  - {first: Steffen, last: Frenzel}
+  orcid: 0009-0006-6308-993X
 steffen-herbold:
   names:
   - {first: Steffen, last: Herbold}
@@ -59899,6 +59974,11 @@ william-morgan:
   names:
   - {first: William, last: Morgan}
   - {first: William T., last: Morgan}
+william-muntean:
+  degree: University of Oklahoma
+  names:
+  - {first: William, last: Muntean}
+  orcid: 0009-0007-9507-9274
 william-p-mccarthy:
   names:
   - {first: William P, last: McCarthy}
@@ -60941,6 +61021,11 @@ xiaojing-zhang:
   names:
   - {first: Xiaojing, last: Zhang}
   orcid: 0009-0006-5132-0380
+xiaojing-zhao:
+  degree: The Hong Kong Polytechnic University
+  names:
+  - {first: Xiaojing, last: Zhao}
+  orcid: 0009-0009-7325-5366
 xiaojun-bi:
   names:
   - {first: Xiaojun, last: Bi}
@@ -67694,6 +67779,11 @@ yukang-lin:
   names:
   - {first: Yukang, last: Lin}
   orcid: 0009-0001-2469-5690
+yuki-arase:
+  degree: University of Osaka
+  names:
+  - {first: Yuki, last: Arase}
+  orcid: 0000-0002-7271-6206
 yuki-hou:
   names:
   - {first: Yuki, last: Hou}
@@ -68999,6 +69089,11 @@ zeming-liu:
   names:
   - {first: Zeming, last: Liu}
   orcid: 0000-0002-3691-8097
+zena-al-khalili:
+  degree: Saarland University
+  names:
+  - {first: Zena, last: Al-Khalili}
+  orcid: 0009-0004-3500-3380
 zengchang-qin:
   names:
   - {first: Zengchang, last: Qin}
