--- a/data/yaml/venues/poleval.yaml
+++ b/data/yaml/venues/poleval.yaml
@@ -1,3 +1,3 @@
 acronym: PolEval
-name: Shared Task on Polish Natural Language Processing
+name: "PolEval: The Evaluation Campaign for Natural Language Processing Tools for Polish"
 url: https://poleval.pl
