Memray not supported under Windows

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -72,7 +72,7 @@ dev = [
     "responses>=0.25.8",
 ]
 profiling = [
-    "memray>=1.19.1",
+    "memray>=1.19.1; sys_platform != 'win32'",
     "richbench",
 ]
 
