Add NameSpecification.normalize() with name normalization heuristics

--- a/python/tests/data/anthology/yaml/people.yaml
+++ b/python/tests/data/anthology/yaml/people.yaml
@@ -3,6 +3,9 @@ emily-prudhommeaux:
   - {first: Emily, last: Prud’hommeaux}
   - {first: Emily T., last: Prud’hommeaux}
   - {first: Emily, last: Prud'hommeaux}
+luna-de-bruyne:
+  names:
+  - {first: Luna, last: De Bruyne}
 marcel-bollmann:
   names:
   - {first: Marcel, last: Bollmann}
